--- a/kernel-builder/kubernetes-app.yaml
+++ b/kernel-builder/kubernetes-app.yaml
@@ -31,3 +31,7 @@ spec:
         env:
         - name: SSH_PASSWORD
           value: setYourPasswordHere
+        - name: API_URL
+          value: http://someurl
+        - name: API_TOKEN
+          value: sometoken
